# qdb-api-python

./: .clang-format  .envrc  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE.md  MANIFEST.in  MANIFEST_orig.in  README.md  README.rst  README.txt  __init__.py  clang_build_wrap.cmake  cluster-public-key.txt  cluster-secret-key.txt  compile_commands.sh  dev-requirements-32.txt  dev-requirements.txt  docgen.py  ez_setup.py  gcc46_build_wrap.cmake  gcc48_build_wrap.cmake  memcpy_wrap.cxx  post_build_copy.py  prepare_orig.py  pyproject.toml  pytest.ini  qdb_api_buffer.i  qdb_convert.py  qdb_enum.i  qdb_enum.py  qdb_handle.i  qdb_iterator.i  qdb_python.i  qdb_python_adapters.i  qdb_python_common.i  qdb_python_unix.i  qdb_python_windows.i  qdb_python_wrapper.cxx  (+16 more)
.buildkite/: pipeline.py  requirements.txt
.buildkite/steps/: _build.yml  _test.yml  _test_report.yml
.github/workflows/: lint.yml
.teamcity/: pom.xml  settings.kts
.teamcity/Api_Python/: project-config.xml
.teamcity/Api_Python_Debug/: project-config.xml
.teamcity/Api_Python_Debug_Linux/: project-config.xml
.teamcity/Api_Python_Debug_Linux_AArch64/: project-config.xml
.teamcity/Api_Python_Debug_Linux_X8664Core2/: project-config.xml
.teamcity/Api_Python_Debug_Osx/: project-config.xml
.teamcity/Api_Python_Debug_Osx_AArch64/: project-config.xml
.teamcity/Api_Python_Debug_Osx_X8664Core2/: project-config.xml
.teamcity/Api_Python_Debug_Windows/: project-config.xml
.teamcity/Api_Python_Debug_Windows_Win32/: project-config.xml
doc/: docgen.py
docker/: Dockerfile  Dockerfile.centos  Dockerfile.python2  Dockerfile.python3  docker-compose.yml  set-python-version.sh
examples/: .gitignore  batch_ts_insert.py  cluster_sync.py  csv_insert.py  expiry.py  fake_currency_minutes.csv  import_minutes.py  insert.py  query_tags.py  stats_reporter.py  temperature.py  time_series.py
package/: __init__.py
packaging/: MANIFEST.in  __init__.py  setup.in.py
qdb/: __init__.py  impl.py.bak  wrpme_api.lib
quasardb/: CMakeLists.txt  Makefile  __init__.py  __init__.pyi  add_boost_test.cmake  all.pyi  arrow_batch_push.cpp  arrow_batch_push.hpp  batch_column.hpp  batch_inserter.hpp  batch_pinned_inserter.py  batch_pinned_value_inserter.py  blob.hpp  cluster.cpp  cluster.hpp  cmake_install.cmake  concepts.hpp  continuous.cpp  continuous.hpp  convert.hpp  direct_blob.hpp  direct_handle.hpp  direct_integer.hpp  dispatch.hpp  double.hpp  entry.hpp  error.hpp  firehose.py  handle.cpp  handle.hpp  integer.hpp  logger.cpp  logger.hpp  masked_array.hpp  memcpy_wrap.cpp  metrics.cpp  metrics.hpp  metrics.pyi  module.cpp  module.hpp  (+45 more)
quasardb/cmake_modules/: FindArrow.cmake
quasardb/convert/: array.hpp  point.hpp  range.hpp  unicode.hpp  util.hpp  value.hpp
quasardb/dask/: __init__.py
quasardb/date/: Makefile  cmake_install.cmake  dateConfigVersion.cmake  dateTargets.cmake
quasardb/detail/: invoke.hpp  masked_array.hpp  qdb_resource.hpp  retry.cpp  retry.hpp  sleep.hpp  ts_column.hpp  writer.cpp  writer.hpp
quasardb/extensions/: __init__.py  __init__.pyi  pinned_writer.py  writer.py  writer.pyi
quasardb/numpy/: __init__.py  _deprecated.py
quasardb/pandas/: __init__.py
quasardb/pybind11/: Makefile  cmake_install.cmake
quasardb/pybind11/include/pybind11/: chrono.h  numpy.h
quasardb/quasardb/: __init__.pyi  _batch_column.pyi  _batch_inserter.pyi  _blob.pyi  _cluster.pyi  _continuous.pyi  _double.pyi  _entry.pyi  _error.pyi  _integer.pyi  _node.pyi  _options.pyi  _perf.pyi  _properties.pyi  _query.pyi  _reader.pyi  _retry.pyi  _string.pyi  _table.pyi  _tag.pyi  _timestamp.pyi  _writer.pyi
quasardb/quasardb/metrics/: __init__.pyi
quasardb/range-v3/: Makefile  cmake_install.cmake  range-v3-config-version.cmake  range-v3-config.cmake
quasardb/reader/: ts_row.hpp  ts_value.hpp
quasardb/tests/: conftest.py  test_batch_inserter.py  test_bench_pinned_writer.py  test_buf_size.py  test_compaction.py  test_continuous.py  test_convert.py  test_firehose.py  test_getTimeout.py  test_integer.py  test_numpy.py  test_pandas.py  test_pandas_benchmark.py  test_perf.py  test_prefix.py  test_properties.py  test_query.py  test_stats.py  test_table.py  test_table_blob.py  test_table_double.py  test_table_int64.py  test_table_string.py  test_table_timestamp.py  test_writer.py
quasardb/tests/detail/: sleep.hpp
quasardb/utils/: blob_deque.hpp  ostream.hpp  permutation.hpp  stable_sort.hpp  unzip_view.hpp
quasardb_module/: CMakeLists.txt  blob.hpp  cluster.hpp  entry.hpp  error.hpp  handle.hpp  options.hpp  qdb_client.cpp  query.cpp  query.hpp  tag.hpp  ts.hpp  ts_batch.hpp  version.cpp  version.hpp
src/: CMakeLists.txt  blob.hpp  cluster.hpp  entry.hpp  error.hpp  handle.hpp  memcpy_wrap.cpp  nothing.c  options.hpp  qdb_client.cpp  query.cpp  query.hpp  tag.hpp  ts.hpp  ts_batch.hpp  ts_convert.hpp  utils.hpp
testcases/: settings.py  test_basic.py  test_blob.py  test_blob_scan.py  test_buf_size.py  test_cluster.py  test_connection.py  test_deque.py  test_examples.py  test_expiry.py  test_getTimeout.py  test_hset.py  test_info.py  test_integer.py  test_prefix.py  test_query.py  test_query_exp.py  test_setCompression.py  test_setMaxCardinality.py  test_setTimeout.py  test_suffix.py  test_tag.py  test_timeUtils.py  test_ts.py  test_ts_batch.py  tests.py
tests/: __init__.py  conftest.cpp  conftest.hpp  conftest.py  pulp.parquet  settings.py  test_arrow_batch_push.py  test_basic.py  test_batch_inserter.py  test_batch_pinned_inserter.py  test_batch_pinned_inserter_bench.py  test_bench_pinned_writer.py  test_bench_write_dataframe.py  test_blob.py  test_buf_size.py  test_cluster.py  test_compaction.py  test_connection.py  test_continuous.py  test_convert.cpp  test_convert.py  test_convert_blob.py  test_dask.py  test_double.py  test_entry.py  test_error.py  test_examples.py  test_expiry.py  test_firehose.py  test_getTimeout.py  test_info.py  test_integer.py  test_logging.py  test_metrics.py  test_node.py  test_numpy.py  test_option_client_max_parallelism.py  test_option_query_max_length.py  test_options.py  test_pandas.py  (+35 more)
(+267 files in other folders)
