[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.py?$'
required-version = '24'
extend-exclude = '''
/(
  thirdparty/
)
'''

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "ninja",
    "cmake>=3.9.4",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-s", "-x"]
xfail_strict = true
filterwarnings = []
testpaths = ["tests"]
